build based on 1a960ac

--- a/dev/examples/heat_equation.ipynb
+++ b/dev/examples/heat_equation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Heat Equation\n",
     "\n",
-    "![](../heat_square.png)"
+    "![](heat_square.png)"
    ],
    "metadata": {}
   },
