--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -9,7 +9,7 @@
     "**Keywords**: *hyperelasticity*, *finite strain*, *large deformations*, *Newton's method*,\n",
     "*conjugate gradient*, *automatic differentiation*\n",
     "\n",
-    "![hyperelasticity.png](../hyperelasticity.png)"
+    "![hyperelasticity.png](hyperelasticity.png)"
    ],
    "metadata": {}
   },
@@ -373,15 +373,15 @@
       " \u001b[1m------------------------------------------------------------------------------\u001b[22m\n",
       " \u001b[1m Analysis with 6000 elements  \u001b[22m        Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            3.20s / 26.5%            207MiB / 11.1%    \n",
+      "       Tot / % measured:            3.24s / 22.4%            207MiB / 11.1%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    494ms  58.3%   494ms   13.6MiB  58.9%  13.6MiB\n",
-      " linear solve (Iter...      5    158ms  18.6%  31.6ms    595KiB  2.52%   119KiB\n",
-      " assemble                   6    155ms  18.3%  25.8ms   8.25MiB  35.7%  1.37MiB\n",
-      "   element assemble     36.0k    103ms  12.2%  2.87μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Kryl...      5   40.6ms  4.78%  8.11ms    669KiB  2.83%   134KiB\n",
+      " export                     1    373ms  51.2%   373ms   13.6MiB  58.9%  13.6MiB\n",
+      " linear solve (Iter...      5    157ms  21.6%  31.4ms    595KiB  2.52%   119KiB\n",
+      " assemble                   6    157ms  21.6%  26.1ms   8.25MiB  35.7%  1.37MiB\n",
+      "   element assemble     36.0k    104ms  14.3%  2.89μs     0.00B  0.00%    0.00B\n",
+      " linear solve (Kryl...      5   40.8ms  5.60%  8.16ms    669KiB  2.83%   134KiB\n",
       " \u001b[1m------------------------------------------------------------------------------\u001b[22m"
      ]
     }
