--- a/dev/examples/threaded_assembly.ipynb
+++ b/dev/examples/threaded_assembly.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "cell_type": "markdown",
    "source": [
-    "![](../coloring.png)"
+    "![](coloring.png)"
    ],
    "metadata": {}
   },
@@ -289,13 +289,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.184736 seconds (174.03 k allocations: 6.349 MiB)\n"
+      "  2.201620 seconds (174.03 k allocations: 6.349 MiB)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2.229633751"
+      "text/plain": "2.245374487"
      },
      "metadata": {},
      "execution_count": 9
