build based on ec8dce5

--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -370,19 +370,19 @@
       "  iter:  4\r\u001b[A\n",
       "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\n",
       "  iter:  5\n",
-      " \u001b[1m------------------------------------------------------------------------------\u001b[22m\n",
-      " \u001b[1m Analysis with 6000 elements  \u001b[22m        Time                   Allocations      \n",
+      " ------------------------------------------------------------------------------\n",
+      "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            3.22s / 26.6%            207MiB / 11.1%    \n",
+      "       Tot / % measured:            3.04s / 26.6%            197MiB / 11.7%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    489ms  57.0%   489ms   13.6MiB  58.9%  13.6MiB\n",
-      " linear solve (Iter...      5    170ms  19.8%  34.0ms    595KiB  2.52%   119KiB\n",
-      " assemble                   6    154ms  18.0%  25.7ms   8.25MiB  35.7%  1.37MiB\n",
-      "   element assemble     36.0k    103ms  12.0%  2.87μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Kryl...      5   44.0ms  5.14%  8.81ms    669KiB  2.83%   134KiB\n",
-      " \u001b[1m------------------------------------------------------------------------------\u001b[22m"
+      " export                     1    395ms  49.0%   395ms   13.6MiB  58.9%  13.6MiB\n",
+      " assemble                   6    191ms  23.7%  31.9ms   8.25MiB  35.7%  1.37MiB\n",
+      "   element assemble     36.0k    133ms  16.5%  3.69μs     0.00B  0.00%    0.00B\n",
+      " linear solve (Iter...      5    176ms  21.8%  35.2ms    595KiB  2.52%   119KiB\n",
+      " linear solve (Kryl...      5   44.7ms  5.53%  8.93ms    669KiB  2.83%   134KiB\n",
+      " ------------------------------------------------------------------------------"
      ]
     }
    ],
