--- a/dev/examples/incompressible_elasticity.ipynb
+++ b/dev/examples/incompressible_elasticity.ipynb
@@ -364,27 +364,14 @@
    "metadata": {}
   },
   {
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "\u001b[32m\u001b[1mTest Passed\u001b[22m\u001b[39m"
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
+   "outputs": [],
    "cell_type": "code",
    "source": [
     "linear    = Lagrange{2,RefTetrahedron,1}()\n",
     "quadratic = Lagrange{2,RefTetrahedron,2}()\n",
     "\n",
     "u1 = solve(0.4999999, linear, linear)\n",
-    "u2 = solve(0.4999999, quadratic, linear);\n",
-    "\n",
-    "# test the result                 #jl\n",
-    "using Test                         #jl\n",
-    "@test norm(u2) ≈ 919.2122668839389 #jl"
+    "u2 = solve(0.4999999, quadratic, linear);"
    ],
    "metadata": {},
    "execution_count": 10
