build based on e32b072

--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -366,22 +366,22 @@
      "text": [
       "\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\n",
       "  iter:  1\r\u001b[A\n",
-      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.000329859)\u001b[K\n",
-      "  iter:  3\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\n",
+      "  iter:  4\r\u001b[A\n",
       "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\n",
       "  iter:  5\n",
       " ------------------------------------------------------------------------------\n",
       "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            2.76s / 26.7%            193MiB / 12.0%    \n",
+      "       Tot / % measured:            2.79s / 25.7%            193MiB / 12.0%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    382ms  51.8%   382ms   13.6MiB  58.9%  13.6MiB\n",
-      " assemble                   6    159ms  21.6%  26.5ms   8.25MiB  35.7%  1.37MiB\n",
-      "   element assemble     36.0k    109ms  14.8%  3.03μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Iter...      5    156ms  21.2%  31.3ms    595KiB  2.52%   119KiB\n",
-      " linear solve (Kryl...      5   40.4ms  5.48%  8.09ms    669KiB  2.83%   134KiB\n",
+      " export                     1    362ms  50.5%   362ms   13.6MiB  58.9%  13.6MiB\n",
+      " assemble                   6    161ms  22.4%  26.8ms   8.25MiB  35.7%  1.37MiB\n",
+      "   element assemble     36.0k    109ms  15.2%  3.03μs     0.00B  0.00%    0.00B\n",
+      " linear solve (Iter...      5    156ms  21.7%  31.1ms    595KiB  2.52%   119KiB\n",
+      " linear solve (Kryl...      5   38.9ms  5.42%  7.78ms    669KiB  2.83%   134KiB\n",
       " ------------------------------------------------------------------------------"
      ]
     }
