--- a/dev/examples/helmholtz.ipynb
+++ b/dev/examples/helmholtz.ipynb
@@ -32,17 +32,22 @@
     "\\int \\nabla δu \\cdot \\nabla u d\\Omega\n",
     "+ \\int δu \\cdot u d\\Omega\n",
     "- \\int δu \\cdot f d\\Omega\n",
-    "+ \\int δu \\cdot (u - g_1) d\\Gamma_1\n",
     "+ \\int δu \\cdot (n \\cdot \\nabla u - g_2) d\\Gamma_2\n",
     "$$\n",
     "\n",
-    "where $δu$ is a suitable test function.\n",
-    "\n",
+    "where $δu$ is a suitable test function that satisfies:\n",
+    "$$\n",
+    "δu = 0 \\quad x \\in \\Gamma_1\n",
+    "$$\n",
+    "and $u$ is a suitable function that satisfies:\n",
+    "$$\n",
+    "u = g_1 \\quad x \\in \\Gamma_1\n",
+    "$$\n",
     "The example highlights the following interesting features:\n",
     "\n",
     "* There are two kinds of boundary conditions, \"Dirichlet\" and \"Von Neumann\"\n",
     "* The example contains boundary integrals\n",
-    "* We will implement the von Neumann condition by hand inside the `doassemble` function."
+    "* The Dirichlet condition is imposed strongly and the Von Neumann condition is imposed weakly."
    ],
    "metadata": {}
   },
@@ -95,11 +100,12 @@
   {
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Helmholtz successful\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "ConstraintHandler:\n  Not closed!"
+     },
+     "metadata": {},
+     "execution_count": 2
     }
    ],
    "cell_type": "code",
@@ -116,7 +122,31 @@
     "    return max(1e-15 * one(T), s) # Denormals, be gone\n",
     "end;\n",
     "\n",
-    "dbcs = ConstraintHandler(dh)\n",
+    "dbcs = ConstraintHandler(dh)"
+   ],
+   "metadata": {},
+   "execution_count": 2
+  },
+  {
+   "outputs": [],
+   "cell_type": "markdown",
+   "source": [
+    "The (strong) Dirichlet boundary condition can be handled automatically by the JuAFEM library."
+   ],
+   "metadata": {}
+  },
+  {
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Helmholtz successful\n"
+     ]
+    }
+   ],
+   "cell_type": "code",
+   "source": [
     "dbc = Dirichlet(:u, union(getfaceset(grid, \"top\"), getfaceset(grid, \"right\")), (x,t) -> u_ana(x))\n",
     "add!(dbcs, dbc)\n",
     "close!(dbcs)\n",
@@ -205,7 +235,7 @@
     "println(\"Helmholtz successful\")"
    ],
    "metadata": {},
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "outputs": [],
