build based on ce6ad10

--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -366,22 +366,22 @@
      "text": [
       "\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\n",
       "  iter:  1\r\u001b[A\n",
-      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\n",
-      "  iter:  4\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.000329859)\u001b[K\n",
+      "  iter:  3\r\u001b[A\n",
       "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\n",
       "  iter:  5\n",
       " ------------------------------------------------------------------------------\n",
       "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            2.93s / 27.5%            193MiB / 12.0%    \n",
+      "       Tot / % measured:            2.82s / 27.0%            193MiB / 11.9%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    402ms  49.9%   402ms   13.6MiB  59.0%  13.6MiB\n",
-      " assemble                   6    182ms  22.6%  30.4ms   8.25MiB  35.7%  1.37MiB\n",
-      "   element assemble     36.0k    124ms  15.4%  3.46μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Iter...      5    176ms  21.9%  35.3ms    595KiB  2.52%   119KiB\n",
-      " linear solve (Kryl...      5   45.1ms  5.59%  9.01ms    669KiB  2.83%   134KiB\n",
+      " export                     1    356ms  46.8%   356ms   13.6MiB  58.9%  13.6MiB\n",
+      " assemble                   6    180ms  23.6%  30.0ms   8.25MiB  35.7%  1.37MiB\n",
+      "   element assemble     36.0k    126ms  16.5%  3.49μs     0.00B  0.00%    0.00B\n",
+      " linear solve (Iter...      5    178ms  23.3%  35.5ms    595KiB  2.52%   119KiB\n",
+      " linear solve (Kryl...      5   47.4ms  6.23%  9.48ms    669KiB  2.83%   134KiB\n",
       " ------------------------------------------------------------------------------"
      ]
     }
@@ -397,6 +397,8 @@
    "outputs": [],
    "cell_type": "markdown",
    "source": [
+    "---\n",
+    "\n",
     "*This notebook was generated using [Literate.jl](https://github.com/fredrikekre/Literate.jl).*"
    ],
    "metadata": {}
