build based on 25c179d

--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -364,22 +364,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rSolving: (thresh = 1e-08, value = 0.013799)\u001b[K\n",
-      "  iter:  2\r\u001b[A\n",
+      "\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\n",
+      "  iter:  1\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\n",
+      "  iter:  4\r\u001b[A\n",
       "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\n",
       "  iter:  5\n",
       " ------------------------------------------------------------------------------\n",
       "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            2.12s / 27.9%            193MiB / 11.9%    \n",
+      "       Tot / % measured:            2.63s / 29.8%            193MiB / 11.9%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    295ms  50.0%   295ms   13.6MiB  58.9%  13.6MiB\n",
-      " linear solve (Iter...      5    134ms  22.7%  26.8ms    595KiB  2.52%   119KiB\n",
-      " assemble                   6    128ms  21.7%  21.3ms   8.25MiB  35.8%  1.37MiB\n",
-      "   element assemble     36.0k   89.2ms  15.1%  2.48μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Kryl...      5   33.6ms  5.70%  6.73ms    669KiB  2.83%   134KiB\n",
+      " export                     1    354ms  45.2%   354ms   13.6MiB  58.9%  13.6MiB\n",
+      " linear solve (Iter...      5    216ms  27.6%  43.2ms    595KiB  2.52%   119KiB\n",
+      " assemble                   6    171ms  21.8%  28.4ms   8.25MiB  35.8%  1.37MiB\n",
+      "   element assemble     36.0k    115ms  14.7%  3.20μs     0.00B  0.00%    0.00B\n",
+      " linear solve (Kryl...      5   42.6ms  5.44%  8.53ms    669KiB  2.83%   134KiB\n",
       " ------------------------------------------------------------------------------"
      ]
     }
