build based on 60d4db1

--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -366,22 +366,22 @@
      "text": [
       "\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\n",
       "  iter:  1\r\u001b[A\n",
-      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\n",
-      "  iter:  4\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.000329859)\u001b[K\n",
+      "  iter:  3\r\u001b[A\n",
       "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\n",
       "  iter:  5\n",
       " ------------------------------------------------------------------------------\n",
       "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            2.40s / 28.1%            175MiB / 12.9%    \n",
+      "       Tot / % measured:            2.41s / 30.3%            175MiB / 12.9%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    332ms  49.3%   332ms   13.1MiB  58.0%  13.1MiB\n",
-      " assemble                   6    156ms  23.2%  26.0ms   8.25MiB  36.5%  1.37MiB\n",
-      "   element assemble     36.0k    109ms  16.2%  3.03μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Iter...      5    148ms  21.9%  29.5ms    621KiB  2.68%   124KiB\n",
-      " linear solve (Kryl...      5   38.0ms  5.65%  7.61ms    669KiB  2.89%   134KiB\n",
+      " export                     1    336ms  46.0%   336ms   13.1MiB  58.0%  13.1MiB\n",
+      " assemble                   6    177ms  24.3%  29.6ms   8.25MiB  36.5%  1.37MiB\n",
+      "   element assemble     36.0k    122ms  16.7%  3.38μs     0.00B  0.00%    0.00B\n",
+      " linear solve (Iter...      5    172ms  23.6%  34.5ms    621KiB  2.68%   124KiB\n",
+      " linear solve (Kryl...      5   43.6ms  5.98%  8.72ms    669KiB  2.89%   134KiB\n",
       " ------------------------------------------------------------------------------"
      ]
     }
