build based on 5867e06

--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "outputs": [],
    "cell_type": "markdown",
    "source": [
     "# Hyperelasticity\n",
@@ -14,7 +13,6 @@
    "metadata": {}
   },
   {
-   "outputs": [],
    "cell_type": "markdown",
    "source": [
     "## Introduction\n",
@@ -51,7 +49,6 @@
    "execution_count": 1
   },
   {
-   "outputs": [],
    "cell_type": "markdown",
    "source": [
     "## Hyperelastic material model\n",
@@ -111,7 +108,6 @@
    "execution_count": 2
   },
   {
-   "outputs": [],
    "cell_type": "markdown",
    "source": [
     "Finally, for the finite element problem we need ``\\mathbf{P}`` and\n",
@@ -196,7 +192,6 @@
    "execution_count": 3
   },
   {
-   "outputs": [],
    "cell_type": "markdown",
    "source": [
     "Assembling global residual and tangent"
@@ -228,7 +223,6 @@
    "execution_count": 4
   },
   {
-   "outputs": [],
    "cell_type": "markdown",
    "source": [
     "Define a main function, with a loop for Newton iterations"
@@ -351,7 +345,6 @@
    "execution_count": 5
   },
   {
-   "outputs": [],
    "cell_type": "markdown",
    "source": [
     "Run the simulation"
@@ -366,22 +359,22 @@
      "text": [
       "\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\n",
       "  iter:  1\r\u001b[A\n",
-      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.000329859)\u001b[K\n",
-      "  iter:  3\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\n",
+      "  iter:  4\r\u001b[A\n",
       "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\n",
       "  iter:  5\n",
       " ------------------------------------------------------------------------------\n",
       "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            2.41s / 30.3%            175MiB / 12.9%    \n",
+      "       Tot / % measured:            2.58s / 27.8%            176MiB / 13.1%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    336ms  46.0%   336ms   13.1MiB  58.0%  13.1MiB\n",
-      " assemble                   6    177ms  24.3%  29.6ms   8.25MiB  36.5%  1.37MiB\n",
-      "   element assemble     36.0k    122ms  16.7%  3.38μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Iter...      5    172ms  23.6%  34.5ms    621KiB  2.68%   124KiB\n",
-      " linear solve (Kryl...      5   43.6ms  5.98%  8.72ms    669KiB  2.89%   134KiB\n",
+      " export                     1    363ms  50.6%   363ms   13.3MiB  57.6%  13.3MiB\n",
+      " assemble                   6    162ms  22.6%  27.0ms   8.52MiB  37.0%  1.42MiB\n",
+      "   element assemble     36.0k    114ms  15.9%  3.17μs     0.00B  0.00%    0.00B\n",
+      " linear solve (Iter...      5    155ms  21.6%  31.0ms    621KiB  2.63%   124KiB\n",
+      " linear solve (Kryl...      5   37.7ms  5.25%  7.53ms    669KiB  2.84%   134KiB\n",
       " ------------------------------------------------------------------------------"
      ]
     }
@@ -394,7 +387,6 @@
    "execution_count": 6
   },
   {
-   "outputs": [],
    "cell_type": "markdown",
    "source": [
     "---\n",
