build based on f3ec5e1

--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -359,22 +359,22 @@
      "text": [
       "\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\n",
       "  iter:  1\r\u001b[A\n",
-      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.000329859)\u001b[K\n",
-      "  iter:  3\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\n",
+      "  iter:  4\r\u001b[A\n",
       "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\n",
       "  iter:  5\n",
       " ------------------------------------------------------------------------------\n",
       "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            2.66s / 29.9%            176MiB / 13.1%    \n",
+      "       Tot / % measured:            2.61s / 28.0%            176MiB / 13.1%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    380ms  47.8%   380ms   13.3MiB  57.6%  13.3MiB\n",
-      " linear solve (Iter...      5    185ms  23.3%  37.0ms    622KiB  2.64%   124KiB\n",
-      " assemble                   6    184ms  23.2%  30.7ms   8.52MiB  37.0%  1.42MiB\n",
-      "   element assemble     36.0k    126ms  15.9%  3.51μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Kryl...      5   46.0ms  5.79%  9.21ms    669KiB  2.84%   134KiB\n",
+      " export                     1    374ms  51.3%   374ms   13.3MiB  57.5%  13.3MiB\n",
+      " assemble                   6    169ms  23.1%  28.1ms   8.52MiB  37.0%  1.42MiB\n",
+      "   element assemble     36.0k    113ms  15.5%  3.15μs     0.00B  0.00%    0.00B\n",
+      " linear solve (Iter...      5    149ms  20.4%  29.8ms    622KiB  2.64%   124KiB\n",
+      " linear solve (Kryl...      5   38.2ms  5.23%  7.63ms    669KiB  2.84%   134KiB\n",
       " ------------------------------------------------------------------------------"
      ]
     }
