build based on 20d14ac

--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -359,22 +359,22 @@
      "text": [
       "\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\n",
       "  iter:  1\r\u001b[A\n",
-      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.000329859)\u001b[K\n",
-      "  iter:  3\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\n",
+      "  iter:  4\r\u001b[A\n",
       "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\n",
       "  iter:  5\n",
       " ------------------------------------------------------------------------------\n",
       "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            2.66s / 31.0%            176MiB / 13.1%    \n",
+      "       Tot / % measured:            2.67s / 30.3%            176MiB / 13.1%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    392ms  47.5%   392ms   13.3MiB  57.5%  13.3MiB\n",
-      " linear solve (Iter...      5    192ms  23.3%  38.5ms    622KiB  2.64%   124KiB\n",
-      " assemble                   6    192ms  23.3%  32.0ms   8.52MiB  37.0%  1.42MiB\n",
-      "   element assemble     36.0k    131ms  15.8%  3.63μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Kryl...      5   49.2ms  5.96%  9.84ms    669KiB  2.84%   134KiB\n",
+      " export                     1    378ms  46.7%   378ms   13.3MiB  57.5%  13.3MiB\n",
+      " assemble                   6    205ms  25.4%  34.2ms   8.52MiB  37.0%  1.42MiB\n",
+      "   element assemble     36.0k    125ms  15.5%  3.48μs     0.00B  0.00%    0.00B\n",
+      " linear solve (Iter...      5    180ms  22.3%  36.0ms    622KiB  2.64%   124KiB\n",
+      " linear solve (Kryl...      5   45.2ms  5.60%  9.05ms    669KiB  2.84%   134KiB\n",
       " ------------------------------------------------------------------------------"
      ]
     }
