--- a/previews/PR297/examples/hyperelasticity.ipynb
+++ b/previews/PR297/examples/hyperelasticity.ipynb
@@ -357,24 +357,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\r\n",
+      "\rSolving: (thresh = 1e-08, value = 0.76197)\u001b[K\r\n",
+      "  iter:  0\u001b[K\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\r\n",
       "  iter:  1\u001b[K\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.013799)\u001b[K\r\n",
+      "  iter:  2\u001b[K\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.000329859)\u001b[K\r\n",
+      "  iter:  3\u001b[K\r\u001b[A\n",
       "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\r\n",
       "  iter:  4\u001b[K\r\u001b[A\n",
-      "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\r\n",
+      "\r\u001b[K\u001b[A\rSolving: Time: 0:00:26 (6 iterations)\u001b[K\r\n",
       "  iter:  5\u001b[K\n",
       " ------------------------------------------------------------------------------\n",
       "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            2.89s / 32.0%            171MiB / 9.94%    \n",
+      "       Tot / % measured:            28.5s / 93.5%           11.4GiB / 98.7%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    524ms  56.8%   524ms   7.18MiB  42.3%  7.18MiB\n",
-      " assemble                   6    182ms  19.7%  30.3ms   8.52MiB  50.2%  1.42MiB\n",
-      "   element assemble     36.0k    121ms  13.1%  3.37μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Iter...      5    173ms  18.8%  34.7ms    623KiB  3.59%   125KiB\n",
-      " linear solve (Kryl...      5   44.3ms  4.79%  8.85ms    669KiB  3.85%   134KiB\n",
+      " assemble                   6    25.9s  97.2%   4.32s   11.2GiB  100%   1.87GiB\n",
+      "   element assemble     36.0k    25.9s  96.9%   718μs   11.2GiB  100%    326KiB\n",
+      " export                     1    572ms  2.14%   572ms   7.87MiB  0.07%  7.87MiB\n",
+      " linear solve (Iter...      5    142ms  0.53%  28.4ms    593KiB  0.01%   119KiB\n",
+      " linear solve (Kryl...      5   38.2ms  0.14%  7.64ms    669KiB  0.01%   134KiB\n",
       " ------------------------------------------------------------------------------"
      ]
     }
@@ -402,11 +408,11 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.5.2"
   },
   "kernelspec": {
-   "name": "julia-1.3",
-   "display_name": "Julia 1.3.1",
+   "name": "julia-1.5",
+   "display_name": "Julia 1.5.2",
    "language": "julia"
   }
  },
