build based on 892ec42

--- a/dev/examples/hyperelasticity.ipynb
+++ b/dev/examples/hyperelasticity.ipynb
@@ -357,24 +357,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\n",
-      "  iter:  1\r\u001b[A\n",
-      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\n",
-      "  iter:  4\r\u001b[A\n",
-      "\r\u001b[K\u001b[A\rSolving: Time: 0:00:00 (6 iterations)\u001b[K\n",
-      "  iter:  5\n",
+      "\rSolving: (thresh = 1e-08, value = 0.76197)\u001b[K\r\n",
+      "  iter:  0\u001b[K\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.194526)\u001b[K\r\n",
+      "  iter:  1\u001b[K\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.013799)\u001b[K\r\n",
+      "  iter:  2\u001b[K\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 0.000329859)\u001b[K\r\n",
+      "  iter:  3\u001b[K\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: (thresh = 1e-08, value = 1.92988e-07)\u001b[K\r\n",
+      "  iter:  4\u001b[K\r\u001b[A\n",
+      "\r\u001b[K\u001b[A\rSolving: Time: 0:00:33 (6 iterations)\u001b[K\r\n",
+      "  iter:  5\u001b[K\n",
       " ------------------------------------------------------------------------------\n",
       "  Analysis with 6000 elements          Time                   Allocations      \n",
       "                               ----------------------   -----------------------\n",
-      "       Tot / % measured:            2.88s / 28.5%            177MiB / 13.0%    \n",
+      "       Tot / % measured:            36.2s / 94.1%           11.4GiB / 98.7%    \n",
       "\n",
       " Section               ncalls     time   %tot     avg     alloc   %tot      avg\n",
       " ------------------------------------------------------------------------------\n",
-      " export                     1    377ms  46.0%   377ms   13.3MiB  57.5%  13.3MiB\n",
-      " assemble                   6    215ms  26.2%  35.8ms   8.52MiB  37.0%  1.42MiB\n",
-      "   element assemble     36.0k    117ms  14.3%  3.26μs     0.00B  0.00%    0.00B\n",
-      " linear solve (Iter...      5    183ms  22.2%  36.5ms    622KiB  2.64%   124KiB\n",
-      " linear solve (Kryl...      5   46.3ms  5.64%  9.26ms    669KiB  2.84%   134KiB\n",
+      " assemble                   6    33.1s  97.4%   5.52s   11.2GiB  100%   1.87GiB\n",
+      "   element assemble     36.0k    33.0s  97.0%   917μs   11.2GiB  100%    326KiB\n",
+      " export                     1    664ms  1.95%   664ms   7.87MiB  0.07%  7.87MiB\n",
+      " linear solve (Iter...      5    169ms  0.50%  33.9ms    593KiB  0.01%   119KiB\n",
+      " linear solve (Kryl...      5   45.0ms  0.13%  9.00ms    669KiB  0.01%   134KiB\n",
       " ------------------------------------------------------------------------------"
      ]
     }
@@ -402,11 +408,11 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "1.5.2"
   },
   "kernelspec": {
-   "name": "julia-1.3",
-   "display_name": "Julia 1.3.1",
+   "name": "julia-1.5",
+   "display_name": "Julia 1.5.2",
    "language": "julia"
   }
  },
